<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout android:id="@+id/linearColumngroupfortytwo"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_82pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackgroupfortytwo"
            android:layout_height="@dimen/_336pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageImageSeven"
                android:layout_gravity="start"
                android:layout_height="@dimen/_336pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image7_336x360}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image7_336x360"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_28pxv"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowgroupfortytwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <EditText
                        android:background="@drawable/rectangle_bg_gray_50_border_green_900_radius_28_5"
                        android:drawablePadding="@dimen/_13pxh"
                        android:drawableStart="@drawable/img_arrowleft"
                        android:ellipsize="end"
                        android:hint="@string/lbl_grocery"
                        android:id="@+id/etGroupFortyTwo"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.84"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_19pxh"
                        android:paddingTop="@dimen/_22pxv"
                        android:singleLine="true"
                        android:text="@string/blank"
                        android:textColorHint="@color/black_900"
                        style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>

                    <ImageButton
                        android:id="@+id/btnMenu"
                        android:layout_width="@dimen/_54pxh"
                        android:layout_height="@dimen/_54pxh"
                        android:layout_marginStart="@dimen/_7pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:background="@drawable/rectangle_bg_white_a700_border_green_700_radius_27"
                        android:paddingHorizontal="@dimen/_15pxh"
                        android:paddingVertical="@dimen/_15pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_menu"
                        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlocation"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlocation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLocation"
                    android:layout_height="@dimen/_28pxh"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_22pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_location_28x22"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_location_28x22"/>
                <TextView android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_weight="0.83"
                    android:layout_width="0dp"
                    android:text="@string/blank"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_target_0_5_mile"/>
            </LinearLayout>
            <View android:background="@color/black_900"
                android:id="@+id/lineLineFour"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_46pxh"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_200pxh"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlocationOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLocationOne"
                    android:layout_height="@dimen/_28pxh"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="@dimen/_22pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_location_28x22"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_location_28x22"/>
                <TextView android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_weight="0.83"
                    android:layout_width="0dp"
                    android:text="@string/blank"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_target_1_mile_a"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowlinefourOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnlinefourOne"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_weight="0.84"
                    android:layout_width="0dp" android:orientation="vertical">
                    <View android:background="@color/black_900"
                        android:id="@+id/lineLineFourOne"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_32pxh"
                        android:layout_marginStart="@dimen/_32pxh" android:layout_width="@dimen/_200pxh"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowlocationTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageLocationTwo"
                            android:layout_height="@dimen/_28pxh"
                            android:layout_marginBottom="@dimen/_5pxv"
                            android:layout_marginTop="@dimen/_12pxv"
                            android:layout_width="@dimen/_22pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_location_28x22"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_location_28x22"/>
                        <TextView android:id="@+id/txtLanguageTwo"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_13pxh"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:text="@string/blank"
                            style="@style/txtIntersemibold16" tools:text="@string/msg_whole_foods_mar"/>
                    </LinearLayout>
                    <View android:background="@color/black_900"
                        android:id="@+id/lineLineFive"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_32pxh"
                        android:layout_marginStart="@dimen/_32pxh"
                        android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_200pxh"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowlocationThree"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_17pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageLocationThree"
                            android:layout_height="@dimen/_28pxh"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginTop="@dimen/_17pxv"
                            android:layout_width="@dimen/_22pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_location_28x22"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_location_28x22"/>
                        <TextView android:id="@+id/txtLanguageThree"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_13pxh"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:text="@string/blank"
                            style="@style/txtIntersemibold16" tools:text="@string/msg_whole_foods_mar3"/>
                    </LinearLayout>
                    <View android:background="@color/black_900"
                        android:id="@+id/lineLineSix"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_32pxh"
                        android:layout_marginStart="@dimen/_32pxh"
                        android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_200pxh"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearRowlocationFour"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageLocationFour"
                            android:layout_height="@dimen/_28pxh"
                            android:layout_marginTop="@dimen/_19pxv"
                            android:layout_width="@dimen/_22pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_location_28x22"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_location_28x22"/>
                        <TextView android:id="@+id/txtLanguageFour"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_1pxv"
                            android:layout_marginStart="@dimen/_13pxh"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:text="@string/blank"
                            style="@style/txtIntersemibold16" tools:text="@string/msg_whole_foods_mar5"/>
                    </LinearLayout>
                    <View android:background="@color/black_900"
                        android:id="@+id/lineLineSeven"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_32pxh"
                        android:layout_marginStart="@dimen/_32pxh"
                        android:layout_marginTop="@dimen/_18pxv" android:layout_width="@dimen/_200pxh"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnSend"
                    android:layout_width="@dimen/_54pxh"
                    android:layout_height="@dimen/_54pxh"
                    android:layout_marginBottom="@dimen/_194pxv"
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_27"
                    android:paddingHorizontal="@dimen/_13pxh"
                    android:paddingVertical="@dimen/_13pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_send"
                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
