<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout android:id="@+id/frameStackrectanglefour"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameDestinationCho"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="match_parent" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameStackgroupeight"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_590pxv"
                android:layout_marginBottom="@dimen/_10pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageImageSeven"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image7}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image7"/>
                <LinearLayout android:id="@+id/linearColumngroupeight"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_40pxv"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_28pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbarToolbar"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" app:contentInsetStart="0dp">
                        <LinearLayout
                            android:id="@+id/linearRowgroupeight"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" android:orientation="horizontal">
                            <EditText
                                android:background="@drawable/rectangle_bg_gray_50_border_green_900_radius_28_5"
                                android:drawablePadding="@dimen/_13pxh"
                                android:drawableStart="@drawable/img_location_26x26"
                                android:ellipsize="end"
                                android:hint="@string/msg_current_locatio"
                                android:id="@+id/etGroupEight"
                                android:inputType="text"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.84"
                                android:layout_width="0dp"
                                android:paddingBottom="@dimen/_17pxv"
                                android:paddingEnd="@dimen/_30pxh"
                                android:paddingStart="@dimen/_13pxh"
                                android:paddingTop="@dimen/_19pxv"
                                android:singleLine="true"
                                android:text="@string/blank"
                                android:textColorHint="@color/black_900"
                                style="@style/etSolidRoundedOutline_1"
                                tools:ignore="Autofill"/>
                            <ImageButton
                                android:background="@drawable/rectangle_bg_white_a700_border_green_700_radius_27"
                                android:id="@+id/btnMenu"
                                android:layout_height="@dimen/_54pxh"
                                android:layout_marginBottom="@dimen/_3pxv"
                                android:layout_marginStart="@dimen/_7pxh"
                                android:layout_width="@dimen/_54pxh"
                                android:paddingHorizontal="@dimen/_15pxh"
                                android:paddingVertical="@dimen/_15pxv"
                                android:scaleType="fitCenter"
                                android:src="@drawable/img_menu" tools:ignore="ContentDescription"/>
                        </LinearLayout>
                    </androidx.appcompat.widget.Toolbar>
                    <LinearLayout android:id="@+id/linearRowellipseten"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <FrameLayout
                            android:id="@+id/frameStackellipseten"
                            android:layout_height="@dimen/_353pxv" android:layout_width="@dimen/_274pxh">
                            <View
                                android:background="@drawable/rectangle_bg_deep_purple_a200_19_border_deep_purple_a200_19_radius_24"
                                android:id="@+id/viewEllipseTen"
                                android:layout_gravity="top|end"
                                android:layout_height="@dimen/_48pxh"
                                android:layout_marginBottom="@dimen/_10pxv"
                                android:layout_marginEnd="@dimen/_68pxh"
                                android:layout_marginStart="@dimen/_68pxh"
                                android:layout_marginTop="@dimen/_3pxv" android:layout_width="@dimen/_48pxh"/>
                            <ImageView
                                android:id="@+id/imageVectorThree"
                                android:layout_gravity="start"
                                android:layout_height="@dimen/_286pxh"
                                android:layout_marginHorizontal="@dimen/_32pxh"
                                android:layout_marginVertical="@dimen/_32pxv"
                                android:layout_width="@dimen/_189pxh"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_vector3"
                                tools:ignore="ContentDescription" tools:src="@drawable/img_vector3"/>
                            <LinearLayout
                                android:id="@+id/linearColumncursor"
                                android:layout_gravity="bottom|start"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_57pxh"
                                android:layout_marginStart="@dimen/_57pxh"
                                android:layout_marginTop="@dimen/_10pxv"
                                android:layout_width="wrap_content"
                                android:orientation="vertical" style="@style/groupStyledeep_purple_A200_19cornerRadius">
                                <ImageButton
                                    android:background="@drawable/rectangle_bg_white_a700_radius_16"
                                    android:id="@+id/btnCursor"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_height="@dimen/_32pxh"
                                    android:layout_marginHorizontal="@dimen/_8pxh"
                                    android:layout_marginVertical="@dimen/_8pxv"
                                    android:layout_width="@dimen/_32pxh"
                                    android:paddingHorizontal="@dimen/_7pxh"
                                    android:paddingVertical="@dimen/_7pxv"
                                    android:scaleType="fitCenter"
                                    android:src="@drawable/img_cursor" tools:ignore="ContentDescription"/>
                            </LinearLayout>
                            <View
                                android:background="@drawable/rectangle_bg_deep_purple_a200_border_white_a700_radius_8"
                                android:id="@+id/viewEllipseThirteen"
                                android:layout_gravity="top|end"
                                android:layout_height="@dimen/_16pxh"
                                android:layout_marginBottom="@dimen/_19pxv"
                                android:layout_marginEnd="@dimen/_84pxh"
                                android:layout_marginStart="@dimen/_84pxh"
                                android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_16pxh"/>
                            <EditText
                                android:background="@drawable/rectangle_bg_gray_50_border_green_900_radius_28_5"
                                android:drawablePadding="@dimen/_13pxh"
                                android:drawableStart="@drawable/img_map_24x26"
                                android:ellipsize="end"
                                android:hint="@string/lbl_cmu_sv"
                                android:id="@+id/etGroupFive"
                                android:inputType="text"
                                android:layout_gravity="top|start"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10pxv"
                                android:layout_width="match_parent"
                                android:paddingBottom="@dimen/_16pxv"
                                android:paddingEnd="@dimen/_30pxh"
                                android:paddingStart="@dimen/_13pxh"
                                android:paddingTop="@dimen/_20pxv"
                                android:singleLine="true"
                                android:text="@string/blank"
                                android:textColorHint="@color/black_900"
                                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
                        </FrameLayout>
                        <ImageButton
                            android:background="@drawable/rectangle_bg_white_a700_border_green_700_radius_27"
                            android:id="@+id/btnSort"
                            android:layout_height="@dimen/_54pxh"
                            android:layout_marginBottom="@dimen/_299pxv"
                            android:layout_marginStart="@dimen/_7pxh"
                            android:layout_width="@dimen/_54pxh"
                            android:paddingHorizontal="@dimen/_14pxh"
                            android:paddingVertical="@dimen/_14pxv"
                            android:scaleType="fitCenter"
                            android:src="@drawable/img_sort" tools:ignore="ContentDescription"/>
                    </LinearLayout>
                    <ImageButton
                        android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_27"
                        android:id="@+id/btnSend"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_54pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_39pxv"
                        android:layout_width="@dimen/_54pxh"
                        android:paddingHorizontal="@dimen/_13pxh"
                        android:paddingVertical="@dimen/_13pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_send" tools:ignore="ContentDescription"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout android:id="@+id/linearColumnrectanglefour"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylegray_1">
                <View
                    android:background="@drawable/rectangle_bg_bluegray_100_radius_2"
                    android:id="@+id/lineRectangleFour"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_4pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_15pxv" android:layout_width="@dimen/_56pxh"/>
                <TextView android:id="@+id/txtTime"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent"
                    android:text="@string/blank"
                    style="@style/txtIntersemibold16" tools:text="@string/msg_4_hrs_5_mins_1"/>
                <LinearLayout android:id="@+id/linearRowellipsefourteen"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <FrameLayout
                        android:id="@+id/frameStackellipsefourteen"
                        android:layout_height="@dimen/_35pxv" android:layout_width="@dimen/_93pxh">
                        <View
                            android:background="@drawable/rectangle_bg_bluegray_100_radius_46_5"
                            android:id="@+id/viewEllipseFourteen"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_35pxv"
                            android:layout_marginEnd="@dimen/_1pxh" android:layout_width="@dimen/_93pxh"/>
                        <TextView android:ellipsize="end"
                            android:gravity="top|start"
                            android:id="@+id/txtInformation"
                            android:layout_gravity="end"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10pxv"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_9pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@string/blank"
                            style="@style/txtIntersemibold16" tools:text="@string/lbl_information"/>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/frameStackellipsefifteen"
                        android:layout_height="@dimen/_35pxv"
                        android:layout_marginStart="@dimen/_22pxh" android:layout_width="@dimen/_93pxh">
                        <View
                            android:background="@drawable/rectangle_bg_bluegray_100_radius_46_5"
                            android:id="@+id/viewEllipseFifteen"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_35pxv" android:layout_width="@dimen/_93pxh"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtStart"
                            android:layout_gravity="bottom|center"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8pxv"
                            android:layout_marginEnd="@dimen/_26pxh"
                            android:layout_marginStart="@dimen/_26pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@string/blank"
                            style="@style/txtIntersemibold16" tools:text="@string/lbl_start"/>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/frameStackellipsesixteen"
                        android:layout_height="@dimen/_35pxv"
                        android:layout_marginStart="@dimen/_21pxh" android:layout_width="@dimen/_93pxh">
                        <View
                            android:background="@drawable/rectangle_bg_bluegray_100_radius_46_5"
                            android:id="@+id/viewEllipseSixteen"
                            android:layout_gravity="start"
                            android:layout_height="@dimen/_35pxv" android:layout_width="@dimen/_93pxh"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtShare"
                            android:layout_gravity="bottom|center"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8pxv"
                            android:layout_marginEnd="@dimen/_23pxh"
                            android:layout_marginStart="@dimen/_23pxh"
                            android:layout_marginTop="@dimen/_10pxv"
                            android:layout_width="wrap_content"
                            android:singleLine="true"
                            android:text="@string/blank"
                            style="@style/txtIntersemibold16" tools:text="@string/lbl_share"/>
                    </FrameLayout>
                </LinearLayout>
                <ImageView android:gravity="center_horizontal"
                    android:id="@+id/imageRectangleSeven"
                    android:layout_height="@dimen/_143pxh"
                    android:layout_marginBottom="@dimen/_23pxv"
                    android:layout_marginEnd="@dimen/_20pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_10pxh}"
                    imageRes="@{@drawable/img_rectangle7}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle7"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
